--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -1,6 +1,7 @@
 .aboutMe {
     background: url(/images/About-Bg.png) no-repeat;
    padding-top: 50px;
+   margin-top: 100px;
    height: 100%;
 }
 hr {
