--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,12 +8,14 @@
                 <div class="splash-art">
                     <img src="images/splash-img.png" class="splash-hand float-lg-right" alt="Splash Art">
                 </div>
+                <div class="splash-txt">
                 <h1>Hi, I'm Syrrel</h1>
                     <p class="display-5"><strong>I like</strong>
                         <span id="demo"></span>
                         <span class='type-cursor'>|</span>
                     </p>
                     <p class="display-5"><strong>This is a curation of some of my best works</strong></p>
+        </div>
         </div>
     </div>
 </div>
