--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -64,7 +64,7 @@
         width: 100vw;
     }
     .wHeader {
-        width: 40%;
+        width: 50%;
     }
     .divider {
         width: 20%;
@@ -137,6 +137,10 @@
     }
     .lb-content{
         overflow-y: scroll;
+    }
+    .copyright {
+        height: 8vh;
+        padding-top: 30px;
     }
   
 }
@@ -313,6 +317,7 @@
     }
     .edu {
         width: 70%;
+        margin-top: 70px;
     }   
     .skills-header {
         width: 22%;
@@ -323,6 +328,12 @@
     .skills-txt h1 {
         font-size: 1.4rem !important;
     }
+    .top {
+        margin-bottom: 30px;
+    }
+    .contact {
+        margin-top: 30px;
+    }
     footer {
         margin-top: 50px;
         padding-top: 30px;
@@ -331,6 +342,35 @@
     .f-nav img {
         width: 20%;
         margin-bottom: 30px;
+    }
+    .f-links {
+        width: 50%;
+    }
+}
+
+@media (min-width: 980px) {
+    .splash-txt {
+        line-height: 10px;
+    }
+    .abt-header {
+        width: 30%;
+        margin-bottom: 30px;
+    }
+    .abt-img {
+        width: 12%;
+        float: left;
+        margin-right: 10px;
+    }
+    .flex-cont {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .interests {
+        float: left;
+    }
+    .code {
+        float: left;
     }
 }
 
@@ -385,18 +425,20 @@
         margin-right: 130px;
         margin-top: 160px;
     }
+    .splash-txt {
+        line-height: 10px;
+    }
     .type-cursor {
         font-size: 1.5rem;
     }
     .splash h1{
         margin-top: 400px;
-        font-size: 4rem !important;
+        font-size: 3rem !important;
         margin-left: 30px;
         margin-bottom: 10px;
     }
     .splash p {
-        font-size: 1.5rem;
-        line-height: 20px;
+        font-size: 1rem;
         margin-left: 30px;
     }
     .burger-expand {
@@ -526,6 +568,59 @@
     #p1 {
         width: 400px;
     }
+    .abt-header {
+        width: 20%;
+        margin-bottom: 30px;
+    }
+    .abt-txt {
+        height: 60%;
+    }
+    .abt-txt h1 {
+        padding-top: 40px;
+    }
+
+    .abt-txt p {
+        padding-top: 40px;
+    }
+
+    .abt-img {
+        width: 15%;
+        float: left;
+        margin-right: 20px;
+        margin-top: 10px;
+    }
+
+    .edu img {
+        width: 30%;
+    }
+    .skills-txt img {
+        margin-bottom: 30px;
+    }
+    .flex-cont {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .interests {
+        float: left;
+    }
+    .code {
+        float: left;
+    }
+    .back-top {
+        margin-bottom: 40px;
+
+    }
+    .contact {
+        margin-top: 40px;
+    }
+    .f-nav img {
+        width: 10%;
+    }
+    .copyright {
+        height: 10vh;
+    }
+  
 }
 
 @media (min-width: 1920px) {
@@ -639,5 +734,14 @@
         -webkit-animation-duration: 0.4s;
         animation-name: animatetop;
         animation-duration: 0.4s
+    }
+    .abt-header {
+        width: 40%;
+        margin-bottom: 30px;
+    }
+    .abt-img {
+        width: 30%;
+        float: left;
+        margin-right: 10px;
     }
 }
