--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-    <div class="container-fluid clearfix">
+    <div class="container-fluid clearfix" id="home">
         <div class="row"> 
             <nav class="col-lg-12 col-md-12 col-sm-12"  id="navbar">
               <img src="images/logo/LOGO2.svg" class="main-logo" alt="My Logo">
@@ -119,7 +119,10 @@
         <div class="row skills-cont">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="skills-txt">
-                    <img src="images/Skills-Header.png" class="skills-header">
+                    <img src="images/Skills-Header.png" class="skills-header clearfix">
+
+                    <div class="flex-cont">
+                    <div class="interests">
                     <h1>INTERESTS</h1>
                     <p>User Interface Design</p>
                     <p>User Experience Design</p>
@@ -127,11 +130,12 @@
                     <p>Branding Development</p>
                     <p>Web Development</p>
                     <p>Product Design</p>
-
+                    </div>
 
                     <br>
                     <br>
 
+                    <div class="code">
                     <h1>CODE</h1>
                     <p>HMTL5</p>
                     <p>CSS</p>
@@ -139,10 +143,12 @@
                     <p>BootStrap</p>
                     <p>Sass</p>
                     <p>MySQL </p>
+                    </div>
 
                     <br>
                     <br>
 
+                    <div class="tools">
                     <h1>TOOLS</h1>
                     <p>Photoshop</p>
                     <p>Adobe Illustrator</p>
@@ -151,7 +157,8 @@
                     <p>Cinema 4D</p>
                     <p>GitHub</p>
                     <p>Heroku</p>
-
+                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -159,7 +166,7 @@
 
 <div class="container">
     <div class="row back-top">
-        <a href="/"><h2 class="top">Back to the Top</h2></a>
+        <a href="/#home"><h2 class="top">Back to the Top</h2></a>
     </div>
 </div>
 <hr class="vr">
@@ -168,7 +175,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="contact">
-                    <img src="images/Contact-Header.png" alt="Contact Header" class="abt-header">
+                    <img src="images/Contact-Header.svg" alt="Contact Header" class="abt-header">
                     <p>Want to collaborate? Or do you have
                     any inquiries? Contact me <a href="#">here</a>.</p> 
                 </div>
@@ -197,10 +204,8 @@
                 </ul>
             </div>
         </div>
-        <div class="container-fluid col-sm-12 col-md-12 col-lg-12">
-             <div class="copyright">
-                <p>© 2019 Syrrel Cabiling</p>
-            </div>
+        <div class="container-fluid copyright">
+            <p>Designed and coded with  &#128150; by yours truly</p>
         </div>
 </footer>
     
