--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,7 +15,7 @@
                         <span class='type-cursor'>|</span>
                     </p>
                     <p class="display-5"><strong>This is a curation of some of my best works</strong></p>
-        </div>
+                </div>
         </div>
     </div>
 </div>
@@ -49,16 +49,11 @@
  <!-- Popup for each piece-->
 <div class="lightbox container col-sm-12 col-md-12 col-lg-12">
     <div class="row">
-        <span class="close">x</span>
+        <object width="60" height="42" data="images/exit.png" class="close"></object>
         <div class="lb-content container-fluid">
         </div>  
             <div class="projDesc">
-                <div class="piece-gallery">
-                    <img src="{{ Preview1 }}" alt="Preview">
-                    <img src="{{ Thumbnail1 }}" alt="Thumbnail">
-
-                </div>
-                <img src="{{ OtherImg }}" alt="Slideshow">
+                <img src="{{ OtherImg }}" alt="Slideshow" class="otherImg">
                 <button href="wave.hbs" class="btn btn-outline-danger">Read More</button>
             </div>   
     </div>
