--- a/sass/modules/_lightbox.scss
+++ b/sass/modules/_lightbox.scss
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0px;
     z-index: 5;
-    overflow: visible;
+    overflow: scroll;
     border-radius: 5px; 
     align-items: center;
 }
@@ -16,18 +16,12 @@
 
 
 .lightbox img {
-    max-width: 250px;
+    width: 70%;
 }
 
-.projDesc {
-    width: 100vw;
-    height: 50vh; 
-    top: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #e2d2c0;
+.lightbox object {
+    opacity: 1;
+    z-index: 5;
 }
 
 .lb-content {
@@ -63,12 +57,6 @@
   z-index: 5;
     
 }
-
-.close:hover {
-    color: darkgray;
-  }
-
-
 .projGallery {
     width: 100vw;
     flex-direction: column;
@@ -83,4 +71,22 @@
 @keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
+  }
+
+  .projDesc {
+    margin-top: 20px;
+    width: 100vw;
+    height: 50vh; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e2d2c0;
+    overflow: scroll;
+}
+  .otherImg {
+      margin-bottom: 20px;
+  }
+  .btn {
+      margin-bottom: 30px;
   }
