--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -212,6 +212,15 @@
     #p1 {
         width: 450px;
     }
+
+    .lightbox img {
+        width: 65%;
+    }
+
+    .lightbox object {
+        opacity: 1;
+        z-index: 5;
+    }
     .close {    
         right: 24px;
         top: 10px;
@@ -231,11 +240,13 @@
     
     .projDesc {
         width: 50%;
+        height: 40%;
+        transform: translate(0, 25%);
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #e2d2c0;
+        position: relative;
     }
     
     .projGallery {
@@ -352,6 +363,10 @@
     .splash-txt {
         line-height: 10px;
     }
+
+    .abt-txt {
+        height: 50%;
+    }
     .abt-header {
         width: 30%;
         margin-bottom: 30px;
@@ -372,6 +387,10 @@
     .code {
         float: left;
     }
+    .projDesc {
+        height: 10%;
+    }
+    
 }
 
 @media (min-width: 1200px){
@@ -506,6 +525,7 @@
     
     .projDesc {
         width: 50%;
+        height: 10%;
         display: flex;
         flex-direction: column;
         justify-content: center;
