--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -78,11 +78,11 @@
     <div class="container-fluid"  id="#about">
         <div class="row aboutMe">
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <img src="images/About-Header.png" class="abt-header">
+                <img src="images/About-Header.png" class="abt-header clearfix">
                 <div class="abt-txt">
                     <img src="images/about.png" alt="Avatar" class="abt-img">
                     <h1>Hey!</h1>
-                    <p>My name’s Syrrel &#91;Sai-Rehl&#93; and I am an Interactive Media Design student from London, Ontario. Aside from my love of bubble teas, why UX and UI? Simple, I enjoy turning the technicalities of technology accessible, beautiful, and easy to understand for users.
+                    <p>My name’s Syrrel <i>&#47;Sai-Rehl&#47;</i> and I am an Interactive Media Design student from London, Ontario. Aside from my love of bubble teas, why UX and UI? Simple, I enjoy turning the technicalities of technology accessible, beautiful, and easy to understand for users.
                     <br>
                     <br>
                     If I’m not designing or coding, I’m probably binge-watching TEDTalks or 90 Days Fiancé on YouTube.</p>
@@ -109,7 +109,7 @@
 
                     <h4 class="edu-cert">BACHELOR'S DEGREE</h4>
                     <h1>MEDIA THEORY AND PRODUCTION</h1>
-                    <h4 class="edu-school">FANSHAWE COLLEGE</h4>
+                    <h4 class="edu-school">UNIVERSITY OF WESTERN ONTARIO</h4>
                 </div>
             </div>
         </div>
