--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,7 +40,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/#contact">CONTACT</a>
+                        <a href="/contact.html">CONTACT</a>
                     </li>
                 </ul>
                    <ul class="navlinks2">
@@ -54,7 +54,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/#contact">CONTACT</a>
+                        <a href="/contact.html">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -199,7 +199,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/#contact">CONTACT</a>
+                        <a href="/contact.html">CONTACT</a>
                     </li>
                 </ul>
             </div>
