added nodemailer; contact route is working but not /mail

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,7 +40,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.html">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
                    <ul class="navlinks2">
@@ -54,7 +54,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.html">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
                 <div class="burger-menu d-sm-block d-lg-none d-xl-none">
@@ -177,7 +177,7 @@
                 <div class="contact">
                     <img src="images/Contact-Header.svg" alt="Contact Header" class="abt-header">
                     <p>Want to collaborate? Or do you have
-                    any inquiries? Contact me <a href="#">here</a>.</p> 
+                    any inquiries? Contact me <a href="/contact">here</a>.</p> 
                 </div>
             </div>
         </div>
@@ -199,7 +199,7 @@
                         <a href="/#about">ABOUT</a>
                     </li>
                     <li>
-                        <a href="/contact.html">CONTACT</a>
+                        <a href="/contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
