--- a/views/home.hbs
+++ b/views/home.hbs
@@ -54,7 +54,7 @@
         </div>  
             <div class="projDesc">
                 <img src="{{ OtherImg }}" alt="Slideshow" class="otherImg">
-                <button href="wave.hbs" class="btn btn-outline-danger">Read More</button>
+               <a href="wave.html"><button class="btn btn-outline-danger">Read More</button></a>
             </div>   
     </div>
 </div>
