--- a/views/contact-layout.hbs
+++ b/views/contact-layout.hbs
@@ -70,15 +70,14 @@
 <div class="jumbotron-fluid">
     <h1 class="d-none">Splash</h1>
     <div class="row splash">
-        <div class="col-sm-12 col-lg-12 col-md-12">
-            
-            
+        <div class="col-sm-12 col-lg-12 col-md-12">  
+        </div>
+        <div class="form-cont">
+                    <img src="images/contact-Header.svg" alt="Contact Form Header" class="cont-header">
+                    {{{body}}}
+                </div>
     </div>
 </div>
-</div>
-<main>
-    {{{body}}}
-</main>
 
 <footer class="container-fluid">
     <div class="row">
