--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -19,9 +19,9 @@ hr {
     margin-bottom: 50px;
     padding: 20px;
     border-radius: 8px;
-    box-shadow:         3px 3px 5px 6px #ccc;
-    -moz-box-shadow:    3px 3px 5px 6px #ccc;
-    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+	-moz-box-shadow: 4px 10px 20px -6px #777;
+	box-shadow: 4px 10px 20px -6px #777;
     font-size: .8rem;
     line-height: 25px;
 }
@@ -52,9 +52,9 @@ hr {
     margin-bottom: 50px;
     padding: 20px;
     border-radius: 8px;
-    box-shadow:         3px 3px 5px 6px #ccc;
-    -moz-box-shadow:    3px 3px 5px 6px #ccc;
-    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+	-moz-box-shadow: 4px 10px 20px -6px #777;
+	box-shadow: 4px 10px 20px -6px #777;
     font-size: .8rem;
     line-height: 25px;
 }
@@ -84,9 +84,9 @@ hr {
     margin-bottom: 50px;
     padding: 20px;
     border-radius: 8px;
-    box-shadow:         3px 3px 5px 6px #ccc;
-    -moz-box-shadow:    3px 3px 5px 6px #ccc;
-    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+	-moz-box-shadow: 4px 10px 20px -6px #777;
+	box-shadow: 4px 10px 20px -6px #777;
     font-size: .8rem;
     line-height: 25px;
 }
