--- a/sass/modules/_form.scss
+++ b/sass/modules/_form.scss
@@ -1,8 +1,8 @@
 .form-cont {
     background-color: #fff;
-    box-shadow:         3px 3px 3px 3px rgb(184, 184, 184);
-    -moz-box-shadow:    3px 3px 3px 3px rgb(184, 184, 184);
-    -webkit-box-shadow: 3px 3px 3px 3px rgb(184, 184, 184);
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+	-moz-box-shadow: 4px 10px 20px -6px #777;
+	box-shadow: 4px 10px 20px -6px #777;
    transform: translateY(20%);
    padding: 10px;
 
@@ -15,6 +15,7 @@
 
 .cont-header {
     width: 90%;
+    margin-top: 10px;
     margin-bottom: 30px;
     transform: translateX(5%);
 }
