--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -142,6 +142,13 @@
         height: 8vh;
         padding-top: 30px;
     }
+    .form-cont {
+        transform: translateY(10%);
+        height: 80%;
+    }
+    textarea {
+        width: 100%;
+    }
   
 }
 
@@ -150,6 +157,7 @@
     transform: translateX(5%);
 
 }
+
 
 
 @media (min-width: 768px) {
@@ -382,6 +390,9 @@
     }
     footer {
         margin-top: 0px;
+    }
+    .form-cont {
+        transform: translateY(10%);
     }
 
 }
