--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -77,6 +77,9 @@
         // flex: 0 0 100%;
         // float: left;
     }
+    .copyright {
+        height: 10vh;
+    }
 }
 
 .burger-expand {
@@ -149,7 +152,12 @@
     textarea {
         width: 100%;
     }
-  
+    .form-cont {
+        transform: translateY(20%);
+    }
+    .copyright {
+        height: 10vh;
+    }
 }
 
 
@@ -188,13 +196,14 @@
         background-position: right 0% top 0%;
         background-size: cover;
         top: -160px;
+        clear: both;
     }
     .splash-hand{
         margin-top: 180px;
-        width: 40%;
+        width: 30%;
     }
     .splash h1{
-        margin-top: 40px;
+        margin-top: 30px;
         font-size: 2rem !important;
         margin-left: 30px;
         margin-bottom: 10px;
@@ -320,7 +329,7 @@
         width: 90%;
     }
     .abt-img {
-        width: 20%;
+        width: 15%;
     }
     .demoreel {
         margin-top: 50px;
@@ -357,7 +366,9 @@
         margin-top: 50px;
         padding-top: 30px;
     }
-
+    .copyright {
+        height: 10vh;
+    }
     .f-nav img {
         width: 20%;
         margin-bottom: 30px;
@@ -389,10 +400,24 @@
         width: 70%;
     }
     footer {
-        margin-top: 0px;
+        margin-top: 50px;
     }
     .form-cont {
-        transform: translateY(10%);
+        transform: translateY(30%);
+        width: 70%;
+        height: 60%;
+        position: inherit;
+        clear: both;
+        margin-bottom: 50px;
+    }
+    .cont-header {
+        width: 90%;
+    }
+    form {
+        margin-top: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+
     }
 
 }
@@ -465,11 +490,125 @@
         background-repeat: no-repeat;
         background-position: top 0% right 0% bottom 60%;
     }
+    .form-cont {
+        display: block;
+        position: relative;
+        margin-top: 50px;
+        height: 100%;
+        padding: 30px;
+    }
+    .cont-header {
+        width: 40%;
+    }
+    .submit-button {
+        height: 30%;
+    }
     footer {
-        margin-top: 0px;
+        margin-top: 50px;
         position: relative;
     }
     
+}
+
+@media (min-width: 1024px) {
+    body{
+        overflow-x: hidden;
+    }
+    nav {
+        padding: 0px;
+    }
+    .main-logo{
+        width: 20%;
+        transform: translateX(0);
+ 
+    }
+    .burger-menu {
+        display: flex;
+    }
+    .navlinks {
+       display: none;
+    }
+    .navlinks li {
+        display: inline-flex !important;
+        justify-content: space-around;
+
+    }
+    .navlinks2 {
+        display: flex;
+        justify-content: space-around;
+        margin-right: 20px;
+        z-index: 2;
+        font-size: 1rem;
+
+    }
+    .navlinks2 li{
+        display: inline-flex;
+        margin: 30px;
+    }
+    .splash {
+        height: 130vh;
+    }
+    .splash-txt {
+        transform: translateY(0%);
+    }
+    .splash-art {
+        width:100%;
+        transform: translateX(0%);
+
+    }
+    #work {
+        transform: translateY(30%);
+    }
+    .projLink { 
+
+        border: 2px solid #fff;
+        outline: 5px solid #05322F;
+        background: #05322F;
+        display: block; 
+        width: 60%;  
+        text-decoration: none;
+        margin: 0 auto;
+        padding: 5px;
+    }
+
+    .p1 button {
+        position: absolute;
+        background-color: #05322F;
+        width: 200px;
+        color: white;
+        padding: 16px 32px;
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        left: 165%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .mosaic {
+        margin: 0 auto;
+        width:100%;
+        display:grid;
+        grid-template-columns: 400px 400px;
+        grid-row: auto auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 10px;
+        align-items:center;
+        justify-content:center;
+        text-align: center;
+    }
+    .p1 {
+      
+        padding: 20px;
+        display: flex;
+        right: 40%;
+    }
+    #p1 {
+        width: 400px;
+    }
+    .copyright {
+        height: 15vh;
+    }
 }
 
 @media (min-width: 1200px){
@@ -717,7 +856,7 @@
         width: 10%;
     }
     .copyright {
-        height: 10vh;
+        height: 15vh;
     }
   
 }
