--- a/views/contact-layout.hbs
+++ b/views/contact-layout.hbs
@@ -70,14 +70,10 @@
 <div class="jumbotron-fluid">
     <h1 class="d-none">Splash</h1>
     <div class="row splash">
-        <div class="col-sm-12 col-lg-12 col-md-12">  
-       
-        <div class="form-cont">
-            <img src="images/contact-Header.svg" alt="Contact Form Header" class="cont-header">
-            {{{body}}}
-        </div>
-
-         </div>
+         <div class="col-sm-12 col-lg-8 col-md-8 form-cont text-center">
+                <img src="images/contact-Header.svg" alt="Contact Form Header" class="cont-header">
+                {{{body}}}
+            </div>
     </div>
 </div>
 
@@ -109,10 +105,9 @@
     
 
 
-<script type="module" src="js/main.js"></script>
+<script type="module" src="js/contact-form.js"></script>
 <!--<script type="module" src="js/lightbox.js"></script>-->
 <script type="module" src="js/burger-menu.js"></script>
-<script type="module" src="js/navOnScroll.js"></script>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
