--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -3,7 +3,7 @@
 
 <form action="">
 
-    <input type="text" name="company" placeholder="Name" class="input-length">
+    <input type="text" name="company" required placeholder="Name" class="input-length">
 
     <input type="email" name="usermail" required placeholder="Email" class="input-length">
 
