--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,3 +1,4 @@
+<main>
 <h1 class="d-none">{{title}}</h1>
 <p> I will do my best to get back to you in 24h.</p>
 
@@ -11,3 +12,4 @@
 
     <input type="submit" value="SUBMIT" class="submit-button">
 </form>
+</main>
