--- a/views/errorPage.hbs
+++ b/views/errorPage.hbs
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/error-body-only.css">
     <title>Someone's a  bit lost. Just follow the light!</title>
 </head>
 <body>
-    <a class="error" href="/">Light Home</a>
-    <main class="error-section">
-           {{{ body }}}
-    </main>
+    <div class="container">
+        <div class="row error-section w-responsive justify-content-center align-items-center">
+            <div class="col-sm-12 col-md-8 col-lg-8">
+      
+                {{{ body }}}
+
+            <a class="error btn btn-outline-danger" href="/">Light Home</a>
+            </div>
+        </div>
+    </div>
+  
  
 </body>
 </html>
