--- a/public/css/main.css
+++ b/public/css/main.css
@@ -424,17 +424,46 @@ textarea {
   margin-bottom: 10px; }
 
 .wave-bottom-splash {
-  height: 150vh;
+  height: 100vh;
   background: url("/images/p-img/beach2.png");
   background-size: cover;
   background-position: top 0% right 50% bottom 60%;
   position: relative;
   padding: 25px;
-  text-align: center; }
+  text-align: center;
+  bottom: 0; }
 
 .wave-mock {
   transform: translate(-5%, 60%);
   width: 110%; }
+
+.wave-footer {
+  margin-top: 0px; }
+
+.error-section {
+  width: 50%;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  height: 60vh;
+  display: flex;
+  transform: translate(0%, 40%); }
+
+.error-section a {
+  margin-top: 10px;
+  text-decoration: none;
+  font-size: .8rem; }
+
+.error-section a:hover {
+  background-color: #DF9575; }
+
+.giphy-embed {
+  margin-top: 30px;
+  margin-bottom: 30px; }
+
+.error {
+  margin-top: 15px;
+  padding: 5px; }
 
 * {
   margin: 0 auto;
@@ -612,7 +641,32 @@ button {
     background: #05322F; }
 
   .copyright {
-    height: 10vh; } }
+    height: 10vh; }
+
+  .error-section {
+    width: 90%;
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    height: 60vh;
+    display: flex;
+    transform: translate(0%, 40%); }
+
+  .error-section a {
+    margin-top: 10px;
+    text-decoration: none;
+    font-size: .8rem; }
+
+  .error-section a:hover {
+    background-color: #DF9575; }
+
+  .giphy-embed {
+    margin-top: 30px;
+    margin-bottom: 30px; }
+
+  .error {
+    margin-top: 15px;
+    padding: 5px; } }
 .burger-expand {
   transform: translateX(-10%); }
 
@@ -677,7 +731,27 @@ button {
     height: 200px; }
 
   .copyright {
-    height: 10vh; } }
+    height: 10vh; }
+
+  .wave-Header {
+    margin-top: 20px;
+    width: 40%;
+    left: 50%; }
+
+  .wave-Splash {
+    width: 100%;
+    transform: translate(0%, -10%); }
+
+  .wave-bottom-splash {
+    height: 150vh;
+    position: relative;
+    padding: 25px;
+    text-align: center;
+    bottom: 0; }
+
+  .wave-mock {
+    transform: translate(-5%, 40%);
+    width: 100%; } }
 .burger-expand {
   transform: translateX(5%); }
 
@@ -891,15 +965,16 @@ button {
   .wave-splash {
     position: relative;
     float: left;
-    clear: both; }
+    clear: both;
+    height: 150vh; }
 
   .wave-Header {
-    width: 50%; }
+    width: 40%; }
 
   .wave-Splash {
     margin-bottom: 40px;
     width: 80%;
-    transform: translate(-5%, 0); }
+    transform: translate(-5%, 0%); }
 
   .wave-About {
     position: relative;
@@ -909,7 +984,15 @@ button {
     overflow: hidden; }
 
   .wave-mock {
-    width: 70%; }
+    width: 60%;
+    transform: translateY(10%); }
+
+  .wave-bottom-splash {
+    height: 150vh;
+    position: relative;
+    padding: 25px;
+    text-align: center;
+    bottom: 0; }
 
   .form-cont {
     transform: translateY(40%);
@@ -917,9 +1000,6 @@ button {
     position: relative;
     clear: both;
     margin-bottom: 50px; }
-
-  form {
-    position: relative; }
 
   .form-cont p {
     font-size: .8rem; }
@@ -933,7 +1013,8 @@ button {
   form {
     margin-top: 30px;
     padding-left: 20px;
-    padding-right: 20px; }
+    padding-right: 20px;
+    position: relative; }
 
   .submit-button {
     width: 100px; } }
@@ -969,9 +1050,8 @@ button {
 
   .wave-splash {
     background-size: cover;
-    height: 100vh;
+    height: 120vh;
     position: relative;
-    float: left;
     clear: both;
     margin-bottom: 50px; }
 
@@ -1347,7 +1427,10 @@ button {
     width: 10%; }
 
   .copyright {
-    height: 10vh; } }
+    height: 10vh; }
+
+  .error-section {
+    width: 50%; } }
 @media (min-width: 1920px) {
   body {
     overflow-x: hidden; }
