--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,7 +1,7 @@
 <!-- codes here will render on triple body in errorpage-->
 
-<pre>{{data}}</pre>
+<iframe src="https://giphy.com/embed/xTiN0L7EW5trfOvEk0" width="180" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><a href="https://giphy.com/gifs/internet-apple-technology-xTiN0L7EW5trfOvEk0"></a>
 
-<h1>{{data.customMessage}}</h1>
-<h3>{{data.status}}</h13>
+<h2>{{data.customMessage}}</h2>
+<h3>{{data.status}}</h3>
 <h4>{{data.message}}</h4>
