added php form again

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -10,6 +10,6 @@
 
     <textarea name="message" id="user-message" cols="30" rows="10" placeholder="Message"></textarea>
 
-    <input type="submit" value="SUBMIT" class="submit-button">
+    <input type="submit" value="SUBMIT" class="submit-button font-weight-bold">
 </form>
 </main>
