--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import 'modules/_form';
 @import 'modules/_wave';
+@import 'modules/_thermo';
 @import 'modules/_error';
 
 
@@ -25,7 +26,9 @@
     font-family: 'Made Saonara', serif;
     src: url('fonts/made-saonara/MADE SAONARA PERSONAL USE.otf') format(otf);
 }
-
+html {
+    min-height: 100%;
+}
 html, body {
     font-family: 'Manrope', sans-serif;
     height: 100%;
